// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsDropdown renders ActionsDropdown correctly 1`] = `
<ActionsDropdown
  className=""
  onClickItem={[MockFunction]}
  style={Object {}}
>
  <Component
    className=""
    onClickItem={[MockFunction]}
    palette={
      Object {
        "backgroundColors": Object {
          "button": "#3fbaca",
          "buttonDisabled": "#e2e2e2",
          "common": "#ffffff",
          "main": "#f7f7f7",
          "secondaryToggle": "#ffffff",
          "switchDisabled": "#e7e7e7",
          "switchHandle": "#ffffff",
          "switchOff": "#9d9d9d",
          "switchOn": "#3fbaca",
          "tag": "#293346",
          "toggle": "#425579",
        },
        "borderColors": Object {
          "common": "#e2e2e2",
        },
        "fontColors": Object {
          "anchor": "#3fbaca",
          "button": "#ffffff",
          "common": "#293346",
          "description": "#9d9d9d",
          "disabledAnchor": "#9d9d9d",
          "label": "#2d2d2d",
          "secondaryToggle": "#9d9d9d",
          "tableHeader": "#425579",
          "tag": "#ffffff",
          "text": "#2d2d2d",
          "toggle": "#ffffff",
        },
      }
    }
    style={Object {}}
  >
    <StyledActionsDropdown
      boxShadow="lg"
      className=""
      onClickItem={[MockFunction]}
      palette={
        Object {
          "backgroundColors": Object {
            "button": "#3fbaca",
            "buttonDisabled": "#e2e2e2",
            "common": "#ffffff",
            "main": "#f7f7f7",
            "secondaryToggle": "#ffffff",
            "switchDisabled": "#e7e7e7",
            "switchHandle": "#ffffff",
            "switchOff": "#9d9d9d",
            "switchOn": "#3fbaca",
            "tag": "#293346",
            "toggle": "#425579",
          },
          "borderColors": Object {
            "common": "#e2e2e2",
          },
          "fontColors": Object {
            "anchor": "#3fbaca",
            "button": "#ffffff",
            "common": "#293346",
            "description": "#9d9d9d",
            "disabledAnchor": "#9d9d9d",
            "label": "#2d2d2d",
            "secondaryToggle": "#9d9d9d",
            "tableHeader": "#425579",
            "tag": "#ffffff",
            "text": "#2d2d2d",
            "toggle": "#ffffff",
          },
        }
      }
      style={Object {}}
    >
      <Box
        boxShadow="lg"
        className="sc-gtssRu JXnZp"
        onClickItem={[MockFunction]}
        palette={
          Object {
            "backgroundColors": Object {
              "button": "#3fbaca",
              "buttonDisabled": "#e2e2e2",
              "common": "#ffffff",
              "main": "#f7f7f7",
              "secondaryToggle": "#ffffff",
              "switchDisabled": "#e7e7e7",
              "switchHandle": "#ffffff",
              "switchOff": "#9d9d9d",
              "switchOn": "#3fbaca",
              "tag": "#293346",
              "toggle": "#425579",
            },
            "borderColors": Object {
              "common": "#e2e2e2",
            },
            "fontColors": Object {
              "anchor": "#3fbaca",
              "button": "#ffffff",
              "common": "#293346",
              "description": "#9d9d9d",
              "disabledAnchor": "#9d9d9d",
              "label": "#2d2d2d",
              "secondaryToggle": "#9d9d9d",
              "tableHeader": "#425579",
              "tag": "#ffffff",
              "text": "#2d2d2d",
              "toggle": "#ffffff",
            },
          }
        }
        style={Object {}}
      >
        <Component
          boxShadow="lg"
          className="sc-gtssRu JXnZp"
          onClickItem={[MockFunction]}
          palette={
            Object {
              "backgroundColors": Object {
                "button": "#3fbaca",
                "buttonDisabled": "#e2e2e2",
                "common": "#ffffff",
                "main": "#f7f7f7",
                "secondaryToggle": "#ffffff",
                "switchDisabled": "#e7e7e7",
                "switchHandle": "#ffffff",
                "switchOff": "#9d9d9d",
                "switchOn": "#3fbaca",
                "tag": "#293346",
                "toggle": "#425579",
              },
              "borderColors": Object {
                "common": "#e2e2e2",
              },
              "fontColors": Object {
                "anchor": "#3fbaca",
                "button": "#ffffff",
                "common": "#293346",
                "description": "#9d9d9d",
                "disabledAnchor": "#9d9d9d",
                "label": "#2d2d2d",
                "secondaryToggle": "#9d9d9d",
                "tableHeader": "#425579",
                "tag": "#ffffff",
                "text": "#2d2d2d",
                "toggle": "#ffffff",
              },
            }
          }
          style={Object {}}
        >
          <StyledBox
            boxShadow="lg"
            className="sc-gtssRu JXnZp"
            onClickItem={[MockFunction]}
            palette={
              Object {
                "backgroundColors": Object {
                  "button": "#3fbaca",
                  "buttonDisabled": "#e2e2e2",
                  "common": "#ffffff",
                  "main": "#f7f7f7",
                  "secondaryToggle": "#ffffff",
                  "switchDisabled": "#e7e7e7",
                  "switchHandle": "#ffffff",
                  "switchOff": "#9d9d9d",
                  "switchOn": "#3fbaca",
                  "tag": "#293346",
                  "toggle": "#425579",
                },
                "borderColors": Object {
                  "common": "#e2e2e2",
                },
                "fontColors": Object {
                  "anchor": "#3fbaca",
                  "button": "#ffffff",
                  "common": "#293346",
                  "description": "#9d9d9d",
                  "disabledAnchor": "#9d9d9d",
                  "label": "#2d2d2d",
                  "secondaryToggle": "#9d9d9d",
                  "tableHeader": "#425579",
                  "tag": "#ffffff",
                  "text": "#2d2d2d",
                  "toggle": "#ffffff",
                },
              }
            }
            style={Object {}}
          >
            <div
              className="sc-bdnylx eKyzSX sc-gtssRu JXnZp"
              onClickItem={[MockFunction]}
              style={Object {}}
            >
              <ActionsDropdownArrow
                className=""
                style={Object {}}
              >
                <Component
                  className=""
                  palette={
                    Object {
                      "backgroundColors": Object {
                        "button": "#3fbaca",
                        "buttonDisabled": "#e2e2e2",
                        "common": "#ffffff",
                        "main": "#f7f7f7",
                        "secondaryToggle": "#ffffff",
                        "switchDisabled": "#e7e7e7",
                        "switchHandle": "#ffffff",
                        "switchOff": "#9d9d9d",
                        "switchOn": "#3fbaca",
                        "tag": "#293346",
                        "toggle": "#425579",
                      },
                      "borderColors": Object {
                        "common": "#e2e2e2",
                      },
                      "fontColors": Object {
                        "anchor": "#3fbaca",
                        "button": "#ffffff",
                        "common": "#293346",
                        "description": "#9d9d9d",
                        "disabledAnchor": "#9d9d9d",
                        "label": "#2d2d2d",
                        "secondaryToggle": "#9d9d9d",
                        "tableHeader": "#425579",
                        "tag": "#ffffff",
                        "text": "#2d2d2d",
                        "toggle": "#ffffff",
                      },
                    }
                  }
                  style={Object {}}
                >
                  <StyledActionsDropdownArrow
                    className=""
                    palette={
                      Object {
                        "backgroundColors": Object {
                          "button": "#3fbaca",
                          "buttonDisabled": "#e2e2e2",
                          "common": "#ffffff",
                          "main": "#f7f7f7",
                          "secondaryToggle": "#ffffff",
                          "switchDisabled": "#e7e7e7",
                          "switchHandle": "#ffffff",
                          "switchOff": "#9d9d9d",
                          "switchOn": "#3fbaca",
                          "tag": "#293346",
                          "toggle": "#425579",
                        },
                        "borderColors": Object {
                          "common": "#e2e2e2",
                        },
                        "fontColors": Object {
                          "anchor": "#3fbaca",
                          "button": "#ffffff",
                          "common": "#293346",
                          "description": "#9d9d9d",
                          "disabledAnchor": "#9d9d9d",
                          "label": "#2d2d2d",
                          "secondaryToggle": "#9d9d9d",
                          "tableHeader": "#425579",
                          "tag": "#ffffff",
                          "text": "#2d2d2d",
                          "toggle": "#ffffff",
                        },
                      }
                    }
                    style={Object {}}
                  >
                    <Box
                      className="sc-hKFyIo kPnGBi"
                      palette={
                        Object {
                          "backgroundColors": Object {
                            "button": "#3fbaca",
                            "buttonDisabled": "#e2e2e2",
                            "common": "#ffffff",
                            "main": "#f7f7f7",
                            "secondaryToggle": "#ffffff",
                            "switchDisabled": "#e7e7e7",
                            "switchHandle": "#ffffff",
                            "switchOff": "#9d9d9d",
                            "switchOn": "#3fbaca",
                            "tag": "#293346",
                            "toggle": "#425579",
                          },
                          "borderColors": Object {
                            "common": "#e2e2e2",
                          },
                          "fontColors": Object {
                            "anchor": "#3fbaca",
                            "button": "#ffffff",
                            "common": "#293346",
                            "description": "#9d9d9d",
                            "disabledAnchor": "#9d9d9d",
                            "label": "#2d2d2d",
                            "secondaryToggle": "#9d9d9d",
                            "tableHeader": "#425579",
                            "tag": "#ffffff",
                            "text": "#2d2d2d",
                            "toggle": "#ffffff",
                          },
                        }
                      }
                      style={Object {}}
                    >
                      <Component
                        className="sc-hKFyIo kPnGBi"
                        palette={
                          Object {
                            "backgroundColors": Object {
                              "button": "#3fbaca",
                              "buttonDisabled": "#e2e2e2",
                              "common": "#ffffff",
                              "main": "#f7f7f7",
                              "secondaryToggle": "#ffffff",
                              "switchDisabled": "#e7e7e7",
                              "switchHandle": "#ffffff",
                              "switchOff": "#9d9d9d",
                              "switchOn": "#3fbaca",
                              "tag": "#293346",
                              "toggle": "#425579",
                            },
                            "borderColors": Object {
                              "common": "#e2e2e2",
                            },
                            "fontColors": Object {
                              "anchor": "#3fbaca",
                              "button": "#ffffff",
                              "common": "#293346",
                              "description": "#9d9d9d",
                              "disabledAnchor": "#9d9d9d",
                              "label": "#2d2d2d",
                              "secondaryToggle": "#9d9d9d",
                              "tableHeader": "#425579",
                              "tag": "#ffffff",
                              "text": "#2d2d2d",
                              "toggle": "#ffffff",
                            },
                          }
                        }
                        style={Object {}}
                      >
                        <StyledBox
                          className="sc-hKFyIo kPnGBi"
                          palette={
                            Object {
                              "backgroundColors": Object {
                                "button": "#3fbaca",
                                "buttonDisabled": "#e2e2e2",
                                "common": "#ffffff",
                                "main": "#f7f7f7",
                                "secondaryToggle": "#ffffff",
                                "switchDisabled": "#e7e7e7",
                                "switchHandle": "#ffffff",
                                "switchOff": "#9d9d9d",
                                "switchOn": "#3fbaca",
                                "tag": "#293346",
                                "toggle": "#425579",
                              },
                              "borderColors": Object {
                                "common": "#e2e2e2",
                              },
                              "fontColors": Object {
                                "anchor": "#3fbaca",
                                "button": "#ffffff",
                                "common": "#293346",
                                "description": "#9d9d9d",
                                "disabledAnchor": "#9d9d9d",
                                "label": "#2d2d2d",
                                "secondaryToggle": "#9d9d9d",
                                "tableHeader": "#425579",
                                "tag": "#ffffff",
                                "text": "#2d2d2d",
                                "toggle": "#ffffff",
                              },
                            }
                          }
                          style={Object {}}
                        >
                          <div
                            className="sc-bdnylx hKVIpd sc-hKFyIo kPnGBi"
                            style={Object {}}
                          />
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledActionsDropdownArrow>
                </Component>
              </ActionsDropdownArrow>
              <ActionsDropdownItem
                className=""
                dataLabel="settings"
                key="0/.0"
                onClick={[Function]}
                style={Object {}}
                value="/settings"
              >
                <Component
                  className=""
                  dataLabel="settings"
                  onClick={[Function]}
                  palette={
                    Object {
                      "backgroundColors": Object {
                        "button": "#3fbaca",
                        "buttonDisabled": "#e2e2e2",
                        "common": "#ffffff",
                        "main": "#f7f7f7",
                        "secondaryToggle": "#ffffff",
                        "switchDisabled": "#e7e7e7",
                        "switchHandle": "#ffffff",
                        "switchOff": "#9d9d9d",
                        "switchOn": "#3fbaca",
                        "tag": "#293346",
                        "toggle": "#425579",
                      },
                      "borderColors": Object {
                        "common": "#e2e2e2",
                      },
                      "fontColors": Object {
                        "anchor": "#3fbaca",
                        "button": "#ffffff",
                        "common": "#293346",
                        "description": "#9d9d9d",
                        "disabledAnchor": "#9d9d9d",
                        "label": "#2d2d2d",
                        "secondaryToggle": "#9d9d9d",
                        "tableHeader": "#425579",
                        "tag": "#ffffff",
                        "text": "#2d2d2d",
                        "toggle": "#ffffff",
                      },
                    }
                  }
                  style={Object {}}
                  value="/settings"
                >
                  <StyledActionsDropdownItem
                    className=""
                    dataLabel="settings"
                    onClick={[Function]}
                    palette={
                      Object {
                        "backgroundColors": Object {
                          "button": "#3fbaca",
                          "buttonDisabled": "#e2e2e2",
                          "common": "#ffffff",
                          "main": "#f7f7f7",
                          "secondaryToggle": "#ffffff",
                          "switchDisabled": "#e7e7e7",
                          "switchHandle": "#ffffff",
                          "switchOff": "#9d9d9d",
                          "switchOn": "#3fbaca",
                          "tag": "#293346",
                          "toggle": "#425579",
                        },
                        "borderColors": Object {
                          "common": "#e2e2e2",
                        },
                        "fontColors": Object {
                          "anchor": "#3fbaca",
                          "button": "#ffffff",
                          "common": "#293346",
                          "description": "#9d9d9d",
                          "disabledAnchor": "#9d9d9d",
                          "label": "#2d2d2d",
                          "secondaryToggle": "#9d9d9d",
                          "tableHeader": "#425579",
                          "tag": "#ffffff",
                          "text": "#2d2d2d",
                          "toggle": "#ffffff",
                        },
                      }
                    }
                    style={Object {}}
                    value="/settings"
                  >
                    <Box
                      className="sc-dlnjPT fJaUfw"
                      dataLabel="settings"
                      onClick={[Function]}
                      palette={
                        Object {
                          "backgroundColors": Object {
                            "button": "#3fbaca",
                            "buttonDisabled": "#e2e2e2",
                            "common": "#ffffff",
                            "main": "#f7f7f7",
                            "secondaryToggle": "#ffffff",
                            "switchDisabled": "#e7e7e7",
                            "switchHandle": "#ffffff",
                            "switchOff": "#9d9d9d",
                            "switchOn": "#3fbaca",
                            "tag": "#293346",
                            "toggle": "#425579",
                          },
                          "borderColors": Object {
                            "common": "#e2e2e2",
                          },
                          "fontColors": Object {
                            "anchor": "#3fbaca",
                            "button": "#ffffff",
                            "common": "#293346",
                            "description": "#9d9d9d",
                            "disabledAnchor": "#9d9d9d",
                            "label": "#2d2d2d",
                            "secondaryToggle": "#9d9d9d",
                            "tableHeader": "#425579",
                            "tag": "#ffffff",
                            "text": "#2d2d2d",
                            "toggle": "#ffffff",
                          },
                        }
                      }
                      style={Object {}}
                      value="/settings"
                    >
                      <Component
                        className="sc-dlnjPT fJaUfw"
                        dataLabel="settings"
                        onClick={[Function]}
                        palette={
                          Object {
                            "backgroundColors": Object {
                              "button": "#3fbaca",
                              "buttonDisabled": "#e2e2e2",
                              "common": "#ffffff",
                              "main": "#f7f7f7",
                              "secondaryToggle": "#ffffff",
                              "switchDisabled": "#e7e7e7",
                              "switchHandle": "#ffffff",
                              "switchOff": "#9d9d9d",
                              "switchOn": "#3fbaca",
                              "tag": "#293346",
                              "toggle": "#425579",
                            },
                            "borderColors": Object {
                              "common": "#e2e2e2",
                            },
                            "fontColors": Object {
                              "anchor": "#3fbaca",
                              "button": "#ffffff",
                              "common": "#293346",
                              "description": "#9d9d9d",
                              "disabledAnchor": "#9d9d9d",
                              "label": "#2d2d2d",
                              "secondaryToggle": "#9d9d9d",
                              "tableHeader": "#425579",
                              "tag": "#ffffff",
                              "text": "#2d2d2d",
                              "toggle": "#ffffff",
                            },
                          }
                        }
                        style={Object {}}
                        value="/settings"
                      >
                        <StyledBox
                          className="sc-dlnjPT fJaUfw"
                          dataLabel="settings"
                          onClick={[Function]}
                          palette={
                            Object {
                              "backgroundColors": Object {
                                "button": "#3fbaca",
                                "buttonDisabled": "#e2e2e2",
                                "common": "#ffffff",
                                "main": "#f7f7f7",
                                "secondaryToggle": "#ffffff",
                                "switchDisabled": "#e7e7e7",
                                "switchHandle": "#ffffff",
                                "switchOff": "#9d9d9d",
                                "switchOn": "#3fbaca",
                                "tag": "#293346",
                                "toggle": "#425579",
                              },
                              "borderColors": Object {
                                "common": "#e2e2e2",
                              },
                              "fontColors": Object {
                                "anchor": "#3fbaca",
                                "button": "#ffffff",
                                "common": "#293346",
                                "description": "#9d9d9d",
                                "disabledAnchor": "#9d9d9d",
                                "label": "#2d2d2d",
                                "secondaryToggle": "#9d9d9d",
                                "tableHeader": "#425579",
                                "tag": "#ffffff",
                                "text": "#2d2d2d",
                                "toggle": "#ffffff",
                              },
                            }
                          }
                          style={Object {}}
                          value="/settings"
                        >
                          <div
                            className="sc-bdnylx hKVIpd sc-dlnjPT fJaUfw"
                            onClick={[Function]}
                            style={Object {}}
                            value="/settings"
                          >
                            Settings
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledActionsDropdownItem>
                </Component>
              </ActionsDropdownItem>
              <ActionsDropdownItem
                className=""
                dataLabel="template"
                key="1/.1"
                onClick={[Function]}
                style={Object {}}
                value="/template"
              >
                <Component
                  className=""
                  dataLabel="template"
                  onClick={[Function]}
                  palette={
                    Object {
                      "backgroundColors": Object {
                        "button": "#3fbaca",
                        "buttonDisabled": "#e2e2e2",
                        "common": "#ffffff",
                        "main": "#f7f7f7",
                        "secondaryToggle": "#ffffff",
                        "switchDisabled": "#e7e7e7",
                        "switchHandle": "#ffffff",
                        "switchOff": "#9d9d9d",
                        "switchOn": "#3fbaca",
                        "tag": "#293346",
                        "toggle": "#425579",
                      },
                      "borderColors": Object {
                        "common": "#e2e2e2",
                      },
                      "fontColors": Object {
                        "anchor": "#3fbaca",
                        "button": "#ffffff",
                        "common": "#293346",
                        "description": "#9d9d9d",
                        "disabledAnchor": "#9d9d9d",
                        "label": "#2d2d2d",
                        "secondaryToggle": "#9d9d9d",
                        "tableHeader": "#425579",
                        "tag": "#ffffff",
                        "text": "#2d2d2d",
                        "toggle": "#ffffff",
                      },
                    }
                  }
                  style={Object {}}
                  value="/template"
                >
                  <StyledActionsDropdownItem
                    className=""
                    dataLabel="template"
                    onClick={[Function]}
                    palette={
                      Object {
                        "backgroundColors": Object {
                          "button": "#3fbaca",
                          "buttonDisabled": "#e2e2e2",
                          "common": "#ffffff",
                          "main": "#f7f7f7",
                          "secondaryToggle": "#ffffff",
                          "switchDisabled": "#e7e7e7",
                          "switchHandle": "#ffffff",
                          "switchOff": "#9d9d9d",
                          "switchOn": "#3fbaca",
                          "tag": "#293346",
                          "toggle": "#425579",
                        },
                        "borderColors": Object {
                          "common": "#e2e2e2",
                        },
                        "fontColors": Object {
                          "anchor": "#3fbaca",
                          "button": "#ffffff",
                          "common": "#293346",
                          "description": "#9d9d9d",
                          "disabledAnchor": "#9d9d9d",
                          "label": "#2d2d2d",
                          "secondaryToggle": "#9d9d9d",
                          "tableHeader": "#425579",
                          "tag": "#ffffff",
                          "text": "#2d2d2d",
                          "toggle": "#ffffff",
                        },
                      }
                    }
                    style={Object {}}
                    value="/template"
                  >
                    <Box
                      className="sc-dlnjPT fJaUfw"
                      dataLabel="template"
                      onClick={[Function]}
                      palette={
                        Object {
                          "backgroundColors": Object {
                            "button": "#3fbaca",
                            "buttonDisabled": "#e2e2e2",
                            "common": "#ffffff",
                            "main": "#f7f7f7",
                            "secondaryToggle": "#ffffff",
                            "switchDisabled": "#e7e7e7",
                            "switchHandle": "#ffffff",
                            "switchOff": "#9d9d9d",
                            "switchOn": "#3fbaca",
                            "tag": "#293346",
                            "toggle": "#425579",
                          },
                          "borderColors": Object {
                            "common": "#e2e2e2",
                          },
                          "fontColors": Object {
                            "anchor": "#3fbaca",
                            "button": "#ffffff",
                            "common": "#293346",
                            "description": "#9d9d9d",
                            "disabledAnchor": "#9d9d9d",
                            "label": "#2d2d2d",
                            "secondaryToggle": "#9d9d9d",
                            "tableHeader": "#425579",
                            "tag": "#ffffff",
                            "text": "#2d2d2d",
                            "toggle": "#ffffff",
                          },
                        }
                      }
                      style={Object {}}
                      value="/template"
                    >
                      <Component
                        className="sc-dlnjPT fJaUfw"
                        dataLabel="template"
                        onClick={[Function]}
                        palette={
                          Object {
                            "backgroundColors": Object {
                              "button": "#3fbaca",
                              "buttonDisabled": "#e2e2e2",
                              "common": "#ffffff",
                              "main": "#f7f7f7",
                              "secondaryToggle": "#ffffff",
                              "switchDisabled": "#e7e7e7",
                              "switchHandle": "#ffffff",
                              "switchOff": "#9d9d9d",
                              "switchOn": "#3fbaca",
                              "tag": "#293346",
                              "toggle": "#425579",
                            },
                            "borderColors": Object {
                              "common": "#e2e2e2",
                            },
                            "fontColors": Object {
                              "anchor": "#3fbaca",
                              "button": "#ffffff",
                              "common": "#293346",
                              "description": "#9d9d9d",
                              "disabledAnchor": "#9d9d9d",
                              "label": "#2d2d2d",
                              "secondaryToggle": "#9d9d9d",
                              "tableHeader": "#425579",
                              "tag": "#ffffff",
                              "text": "#2d2d2d",
                              "toggle": "#ffffff",
                            },
                          }
                        }
                        style={Object {}}
                        value="/template"
                      >
                        <StyledBox
                          className="sc-dlnjPT fJaUfw"
                          dataLabel="template"
                          onClick={[Function]}
                          palette={
                            Object {
                              "backgroundColors": Object {
                                "button": "#3fbaca",
                                "buttonDisabled": "#e2e2e2",
                                "common": "#ffffff",
                                "main": "#f7f7f7",
                                "secondaryToggle": "#ffffff",
                                "switchDisabled": "#e7e7e7",
                                "switchHandle": "#ffffff",
                                "switchOff": "#9d9d9d",
                                "switchOn": "#3fbaca",
                                "tag": "#293346",
                                "toggle": "#425579",
                              },
                              "borderColors": Object {
                                "common": "#e2e2e2",
                              },
                              "fontColors": Object {
                                "anchor": "#3fbaca",
                                "button": "#ffffff",
                                "common": "#293346",
                                "description": "#9d9d9d",
                                "disabledAnchor": "#9d9d9d",
                                "label": "#2d2d2d",
                                "secondaryToggle": "#9d9d9d",
                                "tableHeader": "#425579",
                                "tag": "#ffffff",
                                "text": "#2d2d2d",
                                "toggle": "#ffffff",
                              },
                            }
                          }
                          style={Object {}}
                          value="/template"
                        >
                          <div
                            className="sc-bdnylx hKVIpd sc-dlnjPT fJaUfw"
                            onClick={[Function]}
                            style={Object {}}
                            value="/template"
                          >
                            Template
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledActionsDropdownItem>
                </Component>
              </ActionsDropdownItem>
              <ActionsDropdownItem
                className=""
                dataLabel="preview"
                key="2/.2"
                onClick={[Function]}
                style={Object {}}
                value="/preview"
              >
                <Component
                  className=""
                  dataLabel="preview"
                  onClick={[Function]}
                  palette={
                    Object {
                      "backgroundColors": Object {
                        "button": "#3fbaca",
                        "buttonDisabled": "#e2e2e2",
                        "common": "#ffffff",
                        "main": "#f7f7f7",
                        "secondaryToggle": "#ffffff",
                        "switchDisabled": "#e7e7e7",
                        "switchHandle": "#ffffff",
                        "switchOff": "#9d9d9d",
                        "switchOn": "#3fbaca",
                        "tag": "#293346",
                        "toggle": "#425579",
                      },
                      "borderColors": Object {
                        "common": "#e2e2e2",
                      },
                      "fontColors": Object {
                        "anchor": "#3fbaca",
                        "button": "#ffffff",
                        "common": "#293346",
                        "description": "#9d9d9d",
                        "disabledAnchor": "#9d9d9d",
                        "label": "#2d2d2d",
                        "secondaryToggle": "#9d9d9d",
                        "tableHeader": "#425579",
                        "tag": "#ffffff",
                        "text": "#2d2d2d",
                        "toggle": "#ffffff",
                      },
                    }
                  }
                  style={Object {}}
                  value="/preview"
                >
                  <StyledActionsDropdownItem
                    className=""
                    dataLabel="preview"
                    onClick={[Function]}
                    palette={
                      Object {
                        "backgroundColors": Object {
                          "button": "#3fbaca",
                          "buttonDisabled": "#e2e2e2",
                          "common": "#ffffff",
                          "main": "#f7f7f7",
                          "secondaryToggle": "#ffffff",
                          "switchDisabled": "#e7e7e7",
                          "switchHandle": "#ffffff",
                          "switchOff": "#9d9d9d",
                          "switchOn": "#3fbaca",
                          "tag": "#293346",
                          "toggle": "#425579",
                        },
                        "borderColors": Object {
                          "common": "#e2e2e2",
                        },
                        "fontColors": Object {
                          "anchor": "#3fbaca",
                          "button": "#ffffff",
                          "common": "#293346",
                          "description": "#9d9d9d",
                          "disabledAnchor": "#9d9d9d",
                          "label": "#2d2d2d",
                          "secondaryToggle": "#9d9d9d",
                          "tableHeader": "#425579",
                          "tag": "#ffffff",
                          "text": "#2d2d2d",
                          "toggle": "#ffffff",
                        },
                      }
                    }
                    style={Object {}}
                    value="/preview"
                  >
                    <Box
                      className="sc-dlnjPT fJaUfw"
                      dataLabel="preview"
                      onClick={[Function]}
                      palette={
                        Object {
                          "backgroundColors": Object {
                            "button": "#3fbaca",
                            "buttonDisabled": "#e2e2e2",
                            "common": "#ffffff",
                            "main": "#f7f7f7",
                            "secondaryToggle": "#ffffff",
                            "switchDisabled": "#e7e7e7",
                            "switchHandle": "#ffffff",
                            "switchOff": "#9d9d9d",
                            "switchOn": "#3fbaca",
                            "tag": "#293346",
                            "toggle": "#425579",
                          },
                          "borderColors": Object {
                            "common": "#e2e2e2",
                          },
                          "fontColors": Object {
                            "anchor": "#3fbaca",
                            "button": "#ffffff",
                            "common": "#293346",
                            "description": "#9d9d9d",
                            "disabledAnchor": "#9d9d9d",
                            "label": "#2d2d2d",
                            "secondaryToggle": "#9d9d9d",
                            "tableHeader": "#425579",
                            "tag": "#ffffff",
                            "text": "#2d2d2d",
                            "toggle": "#ffffff",
                          },
                        }
                      }
                      style={Object {}}
                      value="/preview"
                    >
                      <Component
                        className="sc-dlnjPT fJaUfw"
                        dataLabel="preview"
                        onClick={[Function]}
                        palette={
                          Object {
                            "backgroundColors": Object {
                              "button": "#3fbaca",
                              "buttonDisabled": "#e2e2e2",
                              "common": "#ffffff",
                              "main": "#f7f7f7",
                              "secondaryToggle": "#ffffff",
                              "switchDisabled": "#e7e7e7",
                              "switchHandle": "#ffffff",
                              "switchOff": "#9d9d9d",
                              "switchOn": "#3fbaca",
                              "tag": "#293346",
                              "toggle": "#425579",
                            },
                            "borderColors": Object {
                              "common": "#e2e2e2",
                            },
                            "fontColors": Object {
                              "anchor": "#3fbaca",
                              "button": "#ffffff",
                              "common": "#293346",
                              "description": "#9d9d9d",
                              "disabledAnchor": "#9d9d9d",
                              "label": "#2d2d2d",
                              "secondaryToggle": "#9d9d9d",
                              "tableHeader": "#425579",
                              "tag": "#ffffff",
                              "text": "#2d2d2d",
                              "toggle": "#ffffff",
                            },
                          }
                        }
                        style={Object {}}
                        value="/preview"
                      >
                        <StyledBox
                          className="sc-dlnjPT fJaUfw"
                          dataLabel="preview"
                          onClick={[Function]}
                          palette={
                            Object {
                              "backgroundColors": Object {
                                "button": "#3fbaca",
                                "buttonDisabled": "#e2e2e2",
                                "common": "#ffffff",
                                "main": "#f7f7f7",
                                "secondaryToggle": "#ffffff",
                                "switchDisabled": "#e7e7e7",
                                "switchHandle": "#ffffff",
                                "switchOff": "#9d9d9d",
                                "switchOn": "#3fbaca",
                                "tag": "#293346",
                                "toggle": "#425579",
                              },
                              "borderColors": Object {
                                "common": "#e2e2e2",
                              },
                              "fontColors": Object {
                                "anchor": "#3fbaca",
                                "button": "#ffffff",
                                "common": "#293346",
                                "description": "#9d9d9d",
                                "disabledAnchor": "#9d9d9d",
                                "label": "#2d2d2d",
                                "secondaryToggle": "#9d9d9d",
                                "tableHeader": "#425579",
                                "tag": "#ffffff",
                                "text": "#2d2d2d",
                                "toggle": "#ffffff",
                              },
                            }
                          }
                          style={Object {}}
                          value="/preview"
                        >
                          <div
                            className="sc-bdnylx hKVIpd sc-dlnjPT fJaUfw"
                            onClick={[Function]}
                            style={Object {}}
                            value="/preview"
                          >
                            Preview
                          </div>
                        </StyledBox>
                      </Component>
                    </Box>
                  </StyledActionsDropdownItem>
                </Component>
              </ActionsDropdownItem>
            </div>
          </StyledBox>
        </Component>
      </Box>
    </StyledActionsDropdown>
  </Component>
</ActionsDropdown>
`;

exports[`ActionsDropdown renders ActionsDropdownItem correctly 1`] = `
<ActionsDropdownItem
  className="myClass"
  onClick={[MockFunction]}
  style={
    Object {
      "color": "blue",
    }
  }
>
  <Component
    className="myClass"
    onClick={[MockFunction]}
    palette={
      Object {
        "backgroundColors": Object {
          "button": "#3fbaca",
          "buttonDisabled": "#e2e2e2",
          "common": "#ffffff",
          "main": "#f7f7f7",
          "secondaryToggle": "#ffffff",
          "switchDisabled": "#e7e7e7",
          "switchHandle": "#ffffff",
          "switchOff": "#9d9d9d",
          "switchOn": "#3fbaca",
          "tag": "#293346",
          "toggle": "#425579",
        },
        "borderColors": Object {
          "common": "#e2e2e2",
        },
        "fontColors": Object {
          "anchor": "#3fbaca",
          "button": "#ffffff",
          "common": "#293346",
          "description": "#9d9d9d",
          "disabledAnchor": "#9d9d9d",
          "label": "#2d2d2d",
          "secondaryToggle": "#9d9d9d",
          "tableHeader": "#425579",
          "tag": "#ffffff",
          "text": "#2d2d2d",
          "toggle": "#ffffff",
        },
      }
    }
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <StyledActionsDropdownItem
      className="myClass"
      onClick={[MockFunction]}
      palette={
        Object {
          "backgroundColors": Object {
            "button": "#3fbaca",
            "buttonDisabled": "#e2e2e2",
            "common": "#ffffff",
            "main": "#f7f7f7",
            "secondaryToggle": "#ffffff",
            "switchDisabled": "#e7e7e7",
            "switchHandle": "#ffffff",
            "switchOff": "#9d9d9d",
            "switchOn": "#3fbaca",
            "tag": "#293346",
            "toggle": "#425579",
          },
          "borderColors": Object {
            "common": "#e2e2e2",
          },
          "fontColors": Object {
            "anchor": "#3fbaca",
            "button": "#ffffff",
            "common": "#293346",
            "description": "#9d9d9d",
            "disabledAnchor": "#9d9d9d",
            "label": "#2d2d2d",
            "secondaryToggle": "#9d9d9d",
            "tableHeader": "#425579",
            "tag": "#ffffff",
            "text": "#2d2d2d",
            "toggle": "#ffffff",
          },
        }
      }
      style={
        Object {
          "color": "blue",
        }
      }
    >
      <Box
        className="sc-dlnjPT fJaUfw myClass"
        onClick={[MockFunction]}
        palette={
          Object {
            "backgroundColors": Object {
              "button": "#3fbaca",
              "buttonDisabled": "#e2e2e2",
              "common": "#ffffff",
              "main": "#f7f7f7",
              "secondaryToggle": "#ffffff",
              "switchDisabled": "#e7e7e7",
              "switchHandle": "#ffffff",
              "switchOff": "#9d9d9d",
              "switchOn": "#3fbaca",
              "tag": "#293346",
              "toggle": "#425579",
            },
            "borderColors": Object {
              "common": "#e2e2e2",
            },
            "fontColors": Object {
              "anchor": "#3fbaca",
              "button": "#ffffff",
              "common": "#293346",
              "description": "#9d9d9d",
              "disabledAnchor": "#9d9d9d",
              "label": "#2d2d2d",
              "secondaryToggle": "#9d9d9d",
              "tableHeader": "#425579",
              "tag": "#ffffff",
              "text": "#2d2d2d",
              "toggle": "#ffffff",
            },
          }
        }
        style={
          Object {
            "color": "blue",
          }
        }
      >
        <Component
          className="sc-dlnjPT fJaUfw myClass"
          onClick={[MockFunction]}
          palette={
            Object {
              "backgroundColors": Object {
                "button": "#3fbaca",
                "buttonDisabled": "#e2e2e2",
                "common": "#ffffff",
                "main": "#f7f7f7",
                "secondaryToggle": "#ffffff",
                "switchDisabled": "#e7e7e7",
                "switchHandle": "#ffffff",
                "switchOff": "#9d9d9d",
                "switchOn": "#3fbaca",
                "tag": "#293346",
                "toggle": "#425579",
              },
              "borderColors": Object {
                "common": "#e2e2e2",
              },
              "fontColors": Object {
                "anchor": "#3fbaca",
                "button": "#ffffff",
                "common": "#293346",
                "description": "#9d9d9d",
                "disabledAnchor": "#9d9d9d",
                "label": "#2d2d2d",
                "secondaryToggle": "#9d9d9d",
                "tableHeader": "#425579",
                "tag": "#ffffff",
                "text": "#2d2d2d",
                "toggle": "#ffffff",
              },
            }
          }
          style={
            Object {
              "color": "blue",
            }
          }
        >
          <StyledBox
            className="sc-dlnjPT fJaUfw myClass"
            onClick={[MockFunction]}
            palette={
              Object {
                "backgroundColors": Object {
                  "button": "#3fbaca",
                  "buttonDisabled": "#e2e2e2",
                  "common": "#ffffff",
                  "main": "#f7f7f7",
                  "secondaryToggle": "#ffffff",
                  "switchDisabled": "#e7e7e7",
                  "switchHandle": "#ffffff",
                  "switchOff": "#9d9d9d",
                  "switchOn": "#3fbaca",
                  "tag": "#293346",
                  "toggle": "#425579",
                },
                "borderColors": Object {
                  "common": "#e2e2e2",
                },
                "fontColors": Object {
                  "anchor": "#3fbaca",
                  "button": "#ffffff",
                  "common": "#293346",
                  "description": "#9d9d9d",
                  "disabledAnchor": "#9d9d9d",
                  "label": "#2d2d2d",
                  "secondaryToggle": "#9d9d9d",
                  "tableHeader": "#425579",
                  "tag": "#ffffff",
                  "text": "#2d2d2d",
                  "toggle": "#ffffff",
                },
              }
            }
            style={
              Object {
                "color": "blue",
              }
            }
          >
            <div
              className="sc-bdnylx hKVIpd sc-dlnjPT fJaUfw myClass"
              onClick={[MockFunction]}
              style={
                Object {
                  "color": "blue",
                }
              }
            />
          </StyledBox>
        </Component>
      </Box>
    </StyledActionsDropdownItem>
  </Component>
</ActionsDropdownItem>
`;
